--- a/.github/workflows/github-actions-shellcheck.yml
+++ b/.github/workflows/github-actions-shellcheck.yml
@@ -10,6 +10,6 @@ jobs:
     name: Shellcheck
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Run ShellCheck
-        users: ludeeus/action-shellcheck@master
+    - uses: actions/checkout@v2
+    - name: Run ShellCheck
+      uses: ludeeus/action-shellcheck@master
