--- a/.github/workflows/github-actions-shellcheck.yml
+++ b/.github/workflows/github-actions-shellcheck.yml
@@ -11,5 +11,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Run ShellCheck
-      uses: ludeeus/action-shellcheck@master
+    - name: ShellCheck
+      uses: ludeeus/action-shellcheck@1.1.0
