--- a/.github/workflows/write-good-action.yml
+++ b/.github/workflows/write-good-action.yml
@@ -11,8 +11,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install npm
-        uses: bahmutov/npm-install@v1
-      - run: npm t
+        uses: actions/setup-node@v3
+        with:
+          node-version: 14
+      - run: npm ci
+      - run: npm test
 
       - name: Install write-good
         run: npm install write-good
