--- a/.github/workflows/write-good-action.yml
+++ b/.github/workflows/write-good-action.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install npm
-      - uses: actions/setup-node@v3
+        uses: actions/setup-node@v3
       - uses: bahmutov/npm-install@v1
       - run: npm t
 
