--- a/.github/workflows/write-good-action.yml
+++ b/.github/workflows/write-good-action.yml
@@ -12,8 +12,18 @@ jobs:
 
       - name: Install npm
         uses: actions/setup-node@v3
-      - uses: bahmutov/npm-install@v1
-      - run: npm t
+        with:
+          node-version: '14'
+
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: npm-${{ hashFiles('package-lock.json') }}
+          restore-keys: npm-
+
+      - name: Install dependencies
+        run: npm ci --ignore-scripts
 
       - name: Install write-good
         run: npm install write-good
