--- a/.github/workflows/write-good-action.yml
+++ b/.github/workflows/write-good-action.yml
@@ -16,7 +16,7 @@ jobs:
           node-version: '14'
 
       - name: Install dependencies
-        run: npm ci --ignore-scripts
+        run: npm t
 
       - name: Install write-good
         run: npm install write-good
