--- a/.github/workflows/write-good-action.yml
+++ b/.github/workflows/write-good-action.yml
@@ -23,4 +23,4 @@ jobs:
 
       - name: run write-good test
         run: npx write-good ${{ github.workspace }}/*.md
-        echo "Workflow: ${{github.workflow}}"
+        run: echo "Workflow: ${{github.workflow}}"
