--- a/.github/workflows/write-good-action.yml
+++ b/.github/workflows/write-good-action.yml
@@ -24,4 +24,4 @@ jobs:
       - name: run write-good test
         run: npx write-good ${{ github.workspace }}/*.md
         
-      - run: echo "Workflow: ${{github.workflow}}"
+      - run: echo "🍏 This job's status is ${{ github.workflow }}."
