--- a/.github/workflows/proselint.yml
+++ b/.github/workflows/proselint.yml
@@ -16,7 +16,7 @@ jobs:
           python-version: 3.10.0
           architecture: x64
         
-      - name: Install dependencies
+      - name: Install Python dependencies
         run: pip install -r requirements.txt
 
       - name: Install proselint
